quicktips/index-data/local.css: Fix text-align for rtl.

--- a/quicktips/index-data/local.css
+++ b/quicktips/index-data/local.css
@@ -16,7 +16,7 @@ dd {
 	margin-top: 3em;
 	margin-bottom: .5em;
 	margin-left: -10px;
-	text-align: left;
+	text-align: start;
 	background-color: #ffe;
 	border: 1px solid #CCC;
 	box-shadow: 7px 7px 5px #888;
